Fix navbar visible

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,6 +121,7 @@ button[type="button"]:hover {
   left: 0;
   top: 0;
   z-index: 10;
+  background-color: var(--main-bg-color);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
